--- a/citi-email-signature-v3.html
+++ b/citi-email-signature-v3.html
@@ -8,9 +8,9 @@
  <p style="margin:0;">
   <a href="mailto:adam.jones@citinsw.com.au" style="color:#000;text-decoration:underline;">adam.jones@citinsw.com.au</a>
   <span style="color:#000;">&nbsp;|&nbsp;</span>
-  <a href="https://centralinstitute.nsw.edu.au" style="color:#000;text-decoration:underline;">centralinstitute.nsw.edu.au/</a>
+  <a href="https://centralinstitute.nsw.edu.au" style="color:#000;text-decoration:underline;">centralinstitute.nsw.edu.au</a>
   <br><br>
-  <span style="color:#000;">EV Higher Education Pty Ltd. t/s Central Institute of Technology and Innovation</span>
+  <span style="color:#000;">EV Higher Education Pty Ltd. t/s Central Institute of Technology and Innovation</span><br>
   <a href="https://maps.app.goo.gl/WJSVV7mYLAQrzBVV6" style="color:#000;text-decoration:underline;">Level 5, 136 Chalmers Street, Surry Hills, NSW, 2010</a>
  </p>
  <br>
@@ -28,7 +28,7 @@
   <tr>
    <td style="padding:0;">
     <a href="https://centralinstitute.nsw.edu.au" style="text-decoration:none;">
-     <img alt="CI" width="351" src="https://github.com/centralinstituteeduau/email-signatures/blob/main/CITI---Logo---RGB.png?raw=true" style="max-width:100%;height:auto;border:0;display:block;-ms-interpolation-mode:bicubic;">
+     <img alt="CI" width="230" src="https://github.com/centralinstituteeduau/email-signatures/blob/main/CITI---Logo---RGB.png?raw=true" style="max-width:100%;height:auto;border:0;display:block;-ms-interpolation-mode:bicubic;">
     </a>
    </td>
   </tr>
