--- a/citi-email-signature-v3.html
+++ b/citi-email-signature-v3.html
@@ -17,7 +17,7 @@
  <table cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;margin:0;">
   <tr>
    <td style="padding:0;">
-    <a href="#" style="text-decoration:none;">
+    <a href="http://linkedin.com/company/central-institute-of-technology-and-innovation" style="text-decoration:none;">
      <img alt="LinkedIn" width="24" height="24" src="https://github.com/centralinstituteeduau/email-signatures/blob/main/Linkedin.gif?raw=true" style="display:block;border:0;outline:0;-ms-interpolation-mode:bicubic;">
     </a>
    </td>
