--- a/citi-email-signature-v3.html
+++ b/citi-email-signature-v3.html
@@ -8,7 +8,7 @@
  <p style="margin:0;">
   <a href="mailto:adam.jones@citinsw.com.au" style="color:#000;text-decoration:underline;">adam.jones@citinsw.com.au</a>
   <span style="color:#000;">&nbsp;|&nbsp;</span>
-  <a href="https://centralinstitute.nsw.edu.au" style="color:#000;text-decoration:underline;">centralinstitute.nsw.edu.au</a>
+  <a href="https://citinsw.com.au" style="color:#000;text-decoration:underline;">citinsw.com.au</a>
   <br><br>
   <span style="color:#000;">EV Higher Education Pty Ltd. t/s Central Institute of Technology and Innovation</span><br>
   <a href="https://maps.app.goo.gl/WJSVV7mYLAQrzBVV6" style="color:#000;text-decoration:underline;">Level 5, 136 Chalmers Street, Surry Hills, NSW, 2010</a>
