--- a/citi-email-signature-v3.html
+++ b/citi-email-signature-v3.html
@@ -27,7 +27,7 @@
  <table cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;margin:0;">
   <tr>
    <td style="padding:0;">
-    <a href="https://centralinstitute.nsw.edu.au" style="text-decoration:none;">
+    <a href="https://citinsw.com.au" style="text-decoration:none;">
      <img alt="CI" width="230" src="https://github.com/centralinstituteeduau/email-signatures/blob/main/CITI---Logo---RGB.png?raw=true" style="max-width:100%;height:auto;border:0;display:block;-ms-interpolation-mode:bicubic;">
     </a>
    </td>
